# project-template

./: README.md  cookiecutter.json
figures/: README.md
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: environment.yml  setup.cfg
{{cookiecutter.repo_name}}/data/processed/: README.md
{{cookiecutter.repo_name}}/data/raw/: README.md
{{cookiecutter.repo_name}}/notebooks/: README.md
{{cookiecutter.repo_name}}/scripts/: README.md
