[metadata]
name = {{ cookiecutter.package_name }}
description = {{cookiecutter.description}}
author = Kunin Lab
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Development Status :: 1 - Planning
    Intended Audience :: Mathematics/Research


[options]
packages =
    {{ cookiecutter.package_name }}
python_requires = >=3.10
package_dir = 
    =.