[metadata]
name = {{ cookiecutter.package_name }}
description = {{cookiecutter.description}}
author = Kunin Lab
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: {{cookiecutter.python_version}}
    Development Status :: 1 - Planning
    Intended Audience :: Mathematics/Research


[options]
packages =
    {{ cookiecutter.package_name }}
python_requires = >={{cookiecutter.python_version}}
package_dir = 
    =.